[gd_scene load_steps=3 format=3 uid="uid://bfj8w7n5qhxvj"]

[ext_resource type="Script" path="res://picture_frame.gd" id="1_frame"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_detect"]
size = Vector2(140, 100)

[node name="PictureFrame" type="ColorRect"]
offset_right = 120.0
offset_bottom = 160.0
color = Color(0.6, 0.5, 0.4, 1)
script = ExtResource("1_frame")

[node name="Picture" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -70.0
offset_right = 50.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.8, 0.8, 1)

[node name="Label" type="Label" parent="Picture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.0
offset_right = 50.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "❤"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(60, 488)
collision_layer = 0
collision_mask = 1
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_detect")

[node name="UpArrow" type="Label" parent="."]
visible = false
offset_left = 40.0
offset_top = 488.0
offset_right = 80.0
offset_bottom = 518.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "↑"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionText" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -100.0
offset_top = 520.0
offset_right = 220.0
offset_bottom = 560.0
theme_override_colors/font_color = Color(1, 0.412, 0.706, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16
text = "A beautiful memory from our journey together"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
